<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewactivty.BasketScoreView">

    <include
        android:id="@+id/side"
        layout="@layout/side_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        layout="@layout/header_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="127dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/navbarbetway"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/side" />

    <LinearLayout
        android:layout_width="65dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:shadowColor="@color/white"
            android:shadowDx="5"
            android:shadowDy="4"
            android:shadowRadius="1"
            android:text="S\nC\nO\nR\nE"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@null"
            android:src="@drawable/lens" />

        <TextView
            android:id="@+id/click_teamB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowDx="5"
            android:shadowDy="4"
            android:shadowRadius="1"
            android:text="T\nE\nA\nM\nS"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="66dp"
        android:layout_marginTop="135dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/side"
        app:layout_constraintStart_toStartOf="@+id/side">

        <LinearLayout
            android:id="@+id/content_BView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="30dp"
                android:shadowColor="@color/white"
                android:shadowDx="5"
                android:shadowDy="4"
                android:shadowRadius="1"
                android:text="@string/basket_title"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold"
                tools:ignore="AllCaps" />

            <RelativeLayout
                android:id="@+id/noBasket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:visibility="gone">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/none"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="70dp"
                    android:contentDescription="@null"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/no_data" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/none"
                    android:gravity="center"
                    android:text="@string/no_data"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/basketRecycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_marginEnd="7dp" />
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:lottie_rawRes="@raw/basketball_dunk"
                app:lottie_autoPlay="true"
                android:layout_marginTop="10dp"
                android:layout_marginStart="50dp"
                android:contentDescription="@null"
                app:lottie_loop="true"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loading_BView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/basketball_loading" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/live_match"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>